coral-component-table/src/styles/index.styl
/* ... */
._coral-Table-divider--none {
  &._coral-Table-head {
    ._coral-Table-cell,
    ._coral-Table-headerCell {
      border-top: none;
    }
  }

  &._coral-Table-body {
    ._coral-Table-row:not(:first-of-type) {
      ._coral-Table-cell {
        border-top: none;
      }
    }
  }
}
/* END #divider */

/* #sticky */
._coral-Table-wrapper--sticky {
  position: relative;

  ._coral-Table-wrapper-container {
    border: 1px solid;
    border-radius: 4px;
  }

  ._coral-Table {
  // Fill the gap from the empty head.
  // @todo it should be multipled by the number of head rows
    margin-top: -1px;
  }

// Borders are applied by the container in sticky state so we remove the outer body cell borders and radius
  ._coral-Table-body {
    ._coral-Table-cell {
      &:first-of-type {
        border-left :none;
      }

      &:last-of-type {
        border-right: none;
      }
    }

    ._coral-Table-row {
      &:first-of-type ._coral-Table-cell {
        border-radius: 0;
        border-top: none;
      }

      &:last-of-type ._coral-Table-cell {
        border-radius: 0;
        border-bottom: none;
      }
    }
  }

  ._coral-Table-head[sticky] {
    &._coral-Table-divider--row coral-table-headercell-content {
      border-top: 1px solid;
    }

    &._coral-Table-divider--column coral-table-headercell-content {
      border-right: 1px solid;
    }

    &._coral-Table-divider--cell coral-table-headercell-content {
      border-top: 1px solid;
      border-right: 1px solid;
    }

    ._coral-Table-row:first-child coral-table-headercell-content {
      border-top: none;
    }

    ._coral-Table-headerCell {
    // We can't set 0 or else screen readers will ignore the header cells in sticky state
      height: 0.5px;
      line-height: 0;
      padding-top: 0;
      padding-bottom: 0;
      border-top: none;
      overflow: hidden;

      &:last-of-type coral-table-headercell-content {
        border-right: none;
      }
    }

  // The header cell content is styled to be displayed in sticky state
    coral-table-headercell-content {
      display: block;
      position absolute;
      box-sizing: border-box;
      line-height: 12px;
      min-height: 34px;
      padding: 4px 16px;
      margin-left: -16px;
    }
  }
}
/* END #sticky */

/* #sortable */
._coral-Table-headerCell[sortable] {
  cursor: pointer;
  user-select: none;

  coral-table-headercell-content {
    position: relative;
    cursor: pointer;

    &:after {
      content: '';
      background-size: 10px 10px;
      background-position: 50%;
      background-repeat: no-repeat;
      position: absolute;
      height: 10px;
      width: 10px;
      padding-left: 8px;
      margin-left: 8px;
      margin-top: 1px;
      z-index: -1;
      transition: transform 125ms ease-in-out;
    }
  }

  &[sortabledirection="descending"] {
    coral-table-headercell-content:after {
      transform: rotateZ(180deg);
    }
  }
}
/* END #sortable */

/* #selectable */
._coral-Table-wrapper[selectable] {
  ._coral-Table-row {
    &[coral-table-rowselect]:not([disabled]):hover ._coral-Table-cell {
      cursor: pointer;
    }

    &.is-selected {
      &[coral-table-rowselect] {
        cursor: pointer;
      }
    }
  }
}

._coral-Table-row[selectable] {
  ._coral-Table-cell {
    &[coral-table-cellselect] {
      position: relative;

      &:not([disabled]):hover {
        cursor: pointer;

        &:after {
          content: "";
          background-size: 18px 18px;
          background-position: 50% 50%;
          background-repeat: no-repeat;
          position: absolute;
          top: 0;
          bottom: 0;
          right: 0;
          left: 0;
        }
      }
    }

    &.is-selected {
      position: relative;

      &:after {
        content: "";
        background-size: 18px 18px;
        background-position: 50% 50%;
        background-repeat: no-repeat;
        position: absolute;
        top: 0;
        bottom: 0;
        right: 0;
        left: 0;
      }
    }
  }
}

// Align design to Miller Columns since thumbnail selection pattern was removed in Spectrum
._coral-Table-cell--check {
  white-space: nowrap;

  coral-checkbox[coral-table-rowselect] {
    margin-right: 0;

    & + img {
      height: 24px;
      width: 24px;
      object-fit: cover;
      vertical-align: middle;
      margin-top: 4px;
      margin-left: 8px;
    }

    & + coral-icon {
      height: 32px;
      width: 24px;
      margin-left: 8px;
    }
  }
}

table[is="coral-table"]:not([selectable]) {
  td[is="coral-table-cell"],
  th[is="coral-table-headercell"] {
    [coral-table-select],
    [coral-table-rowselect] {
      display: none;
    }

    [coral-table-rowselect] {
      & + img,
      & + coral-icon {
        margin: 0;
      }
    }
  }
}

tr[is="coral-table-row"]:not([selectable]) {
  td[is="coral-table-cell"],
  th[is="coral-table-headercell"] {
    [coral-table-cellselect] {
      display: none;
    }
  }
}
/* END #selectable */

/* #variant */
// Remove borders and radius for quiet variant
._coral-Table-wrapper--quiet {
  ._coral-Table-body {
    ._coral-Table-row {
      &:first-of-type {
        ._coral-Table-cell {
          &:first-of-type {
            border-top-left-radius: 0;
          }

          &:last-of-type {
            border-top-right-radius: 0;
          }
        }
      }

      &:last-of-type {
        ._coral-Table-cell {
          &:first-of-type {
            border-bottom-left-radius: 0;
          }

          &:last-of-type {
            border-bottom-right-radius: 0;
          }
        }
      }
    }
  }

  &._coral-Table-wrapper--sticky {
    ._coral-Table-wrapper-container {
      border-radius: 0;
    }

    ._coral-Table-body {
      ._coral-Table-row {
        &:first-of-type {
          ._coral-Table-cell {
            border-top: none;
          }
        }

        &:last-of-type {
          ._coral-Table-cell {
            border-bottom: none;
          }
        }
      }
    }
  }
}
/* ... */

